# godot-rust-startup

./: .gitignore  README.md  README_deDE.md  README_enUS.md  README_esES.md  README_itIT.md  README_jaJP.md  README_koKR.md  README_zhCN.md  README_zhTW.md
document/: README_deDE.md  README_enUS.md  README_esES.md  README_frFR.md  README_itIT.md  README_koKR.md  README_zhCN.md
godot/: config.cfg  export_presets.cfg  project.godot
godot/.godot/: extension_list.cfg
godot/application/: godot.gdextension  godot.gdextension.uid  icon.png.import  icon.svg.import
godot/application/internationality/: internationality.csv  internationality.csv.import  internationality.de_DE.translation  internationality.en_US.translation  (+8 more)
godot/scene/: about_author.tscn  about_instruction.tscn  about_version.tscn  dialog_create_demo.tscn  dialog_name_gdext.tscn  dialog_name_rust.tscn  dialog_setting_language.tscn  main.tscn  main_body.tscn  main_default.tscn  main_menu.tscn  main_project.tscn  splash.tscn
godot/theme/: main_body_label_theme.tres  main_menu_theme.tres  main_project_progress_theme.tres
grust/: Cargo.toml
grust/src/: lib.rs
grust/src/about/: about_author_text.rs  about_instruction_text.rs  about_version_text.rs  mod.rs
grust/src/language/: language_button.rs  language_dialog.rs  mod.rs
grust/src/menu/: MainMenu.rs  main_menu.rs  mod.rs  my_file_dialog.rs
grust/src/project/: mod.rs  project_button.rs  project_button_create.rs  project_dialog.rs  project_progress.rs  project_richtext.rs
grust/src/secure/: mod.rs  secure_data.rs  secure_storage.rs
(+5 files in other folders)
